Make Table keyboard navigatable.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -48,6 +48,10 @@ input[type=checkbox] {
   width: 100%;
 }
 
+#usageTable caption {
+  visibility: hidden;
+}
+
 #usageTable tbody {
   white-space: nowrap;
 }
