Summary elements in each details element should be considered a header for the section.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -500,6 +500,12 @@ summary {
   cursor: pointer;
 }
 
+summary>h1 {
+  margin: 0;
+  font-size: inherit;
+  font-weight: normal;
+}
+
 .primaryFilter {
   display: grid;
   width: 100%;
