Add matching padding to header elements in Usage History section.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -818,6 +818,11 @@ button.download:first-of-type {
   border-color: var(--subtleBorder);
 }
 
+summary~h2,
+summary~h3 {
+  padding-left: 1em;
+}
+
 .exceed,
 .exceeded {
   padding: 1em;
