--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -289,7 +289,7 @@ rect+use+text {
 }
 
 #details {
-  border-radius: 8px;
+  border-radius: 0 0 8px 8px;
   padding: 1em 0.5em;
   max-width: 100vw;
   color: var(--diskTreeDetailsFont);
