--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -44,14 +44,9 @@ input[type=checkbox] {
   right: 0;
 }
 
-#usage,
-#subdirs {
+#usageTable,
+#subdirs table {
   padding: 0 1em;
-}
-
-#usage>summary,
-#subdirs>summary {
-  margin: 0 -1em;
 }
 
 #usageTable {
@@ -249,7 +244,7 @@ rect+use+text {
   float: right;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 1em 0 0;
   user-select: none;
 }
 
@@ -286,6 +281,7 @@ rect+use+text {
 
 #perPage {
   float: left;
+  padding-left: 1em;
 }
 
 #perPage select {
@@ -333,7 +329,7 @@ rect+use+text {
   background-position: 1em 0.25em;
   background-size: 1.5em 1.5em;
   padding: 0.5em 1em 0.5em 3.5em;
-  margin-right: 1em;
+  margin-left: 1em;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M40,0 v35 h-20 l30,30 l30,-30 h-20 v-35 z M0,70 v25 h100 v-25 h-30 l-20,15 l-20,-15 z' fill='%23000' stroke-linejoin='round' stroke-width='5' stroke='%23000' /%3E%3C/svg%3E");
 }
 
