--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -478,7 +478,7 @@ rect+use+text {
 
 .multiSelect>ul li:not(:first-child) button:hover:after {
   content: "X";
-  color: var(--exceedWarning);
+  color: var(--multiSelectRemove);
   position: absolute;
   top: 0;
   right: 0;
@@ -893,6 +893,7 @@ th,
 
     --multiSelectBG: var(--background);
     --multiSelectFont: currentColor;
+    --multiSelectRemove: #f00;
 
     --paginationClickableBG: var(--inputAccent);
     --paginationClickableFont: #fff;
@@ -962,6 +963,7 @@ th,
 
     --multiSelectBG: var(--background);
     --multiSelectFont: currentColor;
+    --multiSelectRemove: #f00;
 
     --paginationClickableBG: var(--inputAccent);
     --paginationClickableFont: #000;
