Match left padding on total cells with that of data cells.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -233,7 +233,7 @@ rect+use+text {
 
 #usageTable tfoot>tr>td:not(:empty) {
   border-top: 3px double currentColor;
-  padding: 0.5em 1em;
+  padding: 0.5em 1em 0.5em 0.25em;
 }
 
 #historyTable {
