Split CSS into module specific files where possible.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -1,3 +1,16 @@
+@import url("auth.css");
+@import url("diskTree.css");
+@import url("filter.css");
+@import url("filteredTable.css");
+@import url("history.css");
+@import url("minmax.css");
+@import url("multiSelect.css");
+@import url("scatter.css");
+@import url("subDirs.css");
+@import url("table.css");
+@import url("tabs.css");
+@import url("treeMap.css");
+
 body {
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -12,512 +25,13 @@ body {
   margin: 0;
 }
 
-#login input {
-  display: block;
-  box-sizing: border-box;
-  width: calc(100vw - 4em);
-  font-size: 3em;
-  padding: 1em 2em;
-  margin: 0 2em;
-  border: 0.5em outset #000;
-  cursor: pointer;
-  color: #000;
-  background-color: var(--inputAccent);
-}
-
-#login input:hover {
-  color: #fff;
-}
-
-#login input:active {
-  border-style: inset;
-  padding: 0.9em 2.1em 1.1em 1.9em;
-}
-
 input[type=radio],
 input[type=checkbox] {
   accent-color: var(--inputAccent);
 }
 
-#auth {
-  position: absolute;
-  right: 0;
-}
-
-#usageTable {
-  table-layout: fixed;
-  width: calc(100% - 2em);
-  margin: 4em 1em 1em 1em;
-}
-
 caption {
   visibility: hidden;
-}
-
-#usageTable tbody {
-  white-space: nowrap;
-}
-
-#usageTable td {
-  overflow: hidden;
-}
-
-#usageTable .selected td:first-child,
-#usageTable .selected td:nth-child(2) {
-  white-space: normal;
-}
-
-#usageTable td:first-child,
-#usageTable td:nth-child(2) {
-  text-overflow: ellipsis;
-}
-
-
-#usageTable col:nth-child(3),
-#usageTable col:nth-child(4),
-#usageTable col:nth-child(8),
-#usageTable col:nth-child(9),
-#usageTable col:nth-child(10) {
-  width: 5em;
-}
-
-#usageTable col:nth-child(2),
-#usageTable col:nth-child(5),
-#usageTable col:nth-child(6) {
-  width: 8em;
-}
-
-#usageTable col:nth-child(7) {
-  width: 9em;
-}
-
-#usageTable.noQuota tr> :nth-child(4),
-#usageTable.noQuota tr> :nth-child(5),
-#usageTable.noQuota tr> :nth-child(7),
-#usageTable.noQuota tr> :nth-child(8),
-#usageTable.noQuota tr> :nth-child(10) {
-  visibility: hidden;
-}
-
-#usageTable.noQuota col:nth-child(4),
-#usageTable.noQuota col:nth-child(5),
-#usageTable.noQuota col:nth-child(7),
-#usageTable.noQuota col:nth-child(8),
-#usageTable.noQuota col:nth-child(10) {
-  width: 0;
-}
-
-rect.hasClick {
-  cursor: pointer;
-}
-
-rect+text,
-rect+use,
-rect+use+text {
-  pointer-events: none;
-}
-
-#treeBreadcrumbs {
-  list-style: none;
-  padding: 0;
-  margin-bottom: 0;
-  grid-row: 1;
-  grid-column: 1 / span 2;
-}
-
-#treeBreadcrumbs li {
-  display: inline-block;
-}
-
-#treeBreadcrumbs li:first-child {
-  margin: 0 1em 0 0;
-}
-
-#treeBreadcrumbs li:first-child:after {
-  content: ":";
-  display: inline-block;
-}
-
-#treeBreadcrumbs button {
-  cursor: pointer;
-}
-
-#treeBreadcrumbs li:not(:first-child):not(:last-child):after {
-  display: inline-block;
-  margin: 0 1em;
-  content: "/";
-}
-
-.prettyTable {
-  clear: both;
-  border-collapse: separate;
-  border-spacing: 0;
-  border: 1px solid var(--tableBorder);
-  border-radius: 4px;
-}
-
-.prettyTable thead th {
-  padding-right: 1em;
-  border-bottom: 1px solid currentColor;
-}
-
-.prettyTable thead th.sortable:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.prettyTable .sortable {
-  height: 2em;
-  background-repeat: no-repeat;
-  background-position: right 0 center;
-  background-size: 1em 2em;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23aaa'  fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23aaa' fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
-}
-
-.prettyTable .sort {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23aaa'  fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23f00' fill-opacity='1' stroke='%23000' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
-}
-
-.prettyTable .reverse {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23f00'  fill-opacity='1' stroke='%23000' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23aaa' fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
-}
-
-.prettyTable tbody tr {
-  background-color: var(--tableOddBG);
-  color: var(--tableOddFont);
-}
-
-.prettyTable tbody tr:nth-child(even) {
-  background-color: var(--tableEventBG);
-  color: var(--tableEvenFont);
-}
-
-.prettyTable tbody tr:hover {
-  background-color: var(--tableHoverBG);
-  color: var(--tableHoverFont);
-}
-
-.prettyTable tbody tr.selected {
-  background-color: var(--tableSelectedBG);
-  color: var(--tableSelectedFont);
-}
-
-.prettyTable tbody {
-  cursor: pointer;
-}
-
-.prettyTable tbody tr td {
-  padding: 0.5em 0.25em;
-}
-
-#usageTable tbody td:nth-child(3),
-#usageTable tfoot td:nth-child(3),
-#usageTable tbody td:nth-child(4),
-#usageTable tbody td:nth-child(5),
-#usageTable tbody td:nth-child(6),
-#usageTable tfoot td:nth-child(6),
-#usageTable tbody td:nth-child(7),
-#usageTable tbody td:nth-child(8),
-#usageTable tbody td:nth-child(9),
-#historyTable tbody td:nth-child(2),
-#historyTable tbody td:nth-child(3),
-#historyTable tbody td:nth-child(4) {
-  text-align: right;
-  padding-right: 1em;
-}
-
-#usageTable tbody td:nth-child(10) {
-  text-align: center;
-  white-space: nowrap;
-}
-
-#usageTable tfoot>tr>td:not(:empty) {
-  border-top: 3px double currentColor;
-  padding: 0.5em 1em 0.5em 0.25em;
-}
-
-#historyTable {
-  overflow: hidden;
-  width: calc(100% - 2em);
-  margin: 1em 1em;
-}
-
-.pagination {
-  float: right;
-  list-style: none;
-  margin: 0;
-  padding: 0 1em 0 0;
-  user-select: none;
-}
-
-.pagination>li {
-  display: inline-block;
-}
-
-.pagination>li:not(:first-child) {
-  margin-left: 0.25em;
-}
-
-.pagination .pagination_link {
-  cursor: pointer;
-  background-color: var(--paginationClickableBG);
-  border: 1px solid var(--paginationClickableBorder);
-  color: var(--paginationClickableFont);
-}
-
-.pagination_link,
-.pagination_selected,
-.pagination_next,
-.pagination_prev {
-  padding: 0.1em 0.25em;
-  background-color: var(--paginationNonClickableBG);
-  border: 1px solid var(--paginationNonClickableBorder);
-  color: var(--paginationNonClickableFont);
-  border-radius: 4px;
-}
-
-.pagination_selected {
-  font-weight: bold;
-}
-
-#perPage {
-  float: left;
-  padding-left: 1em;
-}
-
-#perPage select {
-  border: 1px solid var(--perPageBorder);
-  background-color: var(--perPageBG);
-  color: var(--perPageFont);
-  border-radius: 3px;
-  padding: 5px;
-  background-color: transparent;
-  padding: 4px;
-}
-
-#details {
-  border-radius: 0 0 8px 8px;
-  padding: 1em 0.5em;
-  max-width: 100vw;
-  color: var(--diskTreeDetailsFont);
-  background-color: var(--diskTreeDetailsBG);
-  border: 1px solid var(--diskTreeDetailsBorder);
-  box-sizing: border-box;
-}
-
-#details table {
-  width: 100%;
-  table-layout: fixed;
-}
-
-#details th {
-  text-align: left;
-  width: 5em;
-}
-
-#details td div {
-  white-space: nowrap;
-  overflow-x: hidden;
-}
-
-#details td div:hover {
-  overflow-x: auto;
-}
-
-.download {
-  background-repeat: no-repeat;
-  background-position: 1em 0.25em;
-  background-size: 1.5em 1.5em;
-  padding: 0.5em 1em 0.5em 3.5em;
-  margin-left: 1em;
-  margin-bottom: 1em;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M40,0 v35 h-20 l30,30 l30,-30 h-20 v-35 z M0,70 v25 h100 v-25 h-30 l-20,15 l-20,-15 z' fill='%23000' stroke-linejoin='round' stroke-width='5' stroke='%23000' /%3E%3C/svg%3E");
-}
-
-.minmax {
-  position: relative;
-  display: block;
-  margin: 0 1em;
-  height: calc(1em + 4px + 1em + 1px);
-  grid-column: 2 / span 3;
-}
-
-.minmax_min,
-.minmax_max,
-.minmax_minValue,
-.minmax_maxValue {
-  position: absolute;
-  top: 0;
-}
-
-.minmax_min,
-.minmax_max {
-  padding: 2px;
-  margin-top: -6px;
-  background-color: #aaa;
-}
-
-.minmax_min,
-.minmax_max {
-  background-color: var(--minmaxStaticBG);
-  color: var(--minmaxStaticFont);
-}
-
-.minmax_setLine,
-.minmax_minValue,
-.minmax_maxValue {
-  color: var(--minmaxRangeFont);
-  background-color: var(--minmaxRangeBG);
-}
-
-.minmax_min {
-  right: 100%;
-}
-
-.minmax_max {
-  left: 100%;
-}
-
-.minmax_line,
-.minmax_setLine {
-  position: absolute;
-  top: calc(1em + 4px + 0.5em - 5px);
-  bottom: 5px;
-}
-
-.minmax_line {
-  left: 0;
-  right: 0;
-  border-radius: 1em;
-  background-color: var(--minmaxLine);
-}
-
-.minmax_minValue,
-.minmax_maxValue {
-  padding: 2px;
-  margin-top: -6px;
-  border-radius: 3px;
-}
-
-.minmax_minSlider,
-.minmax_maxSlider {
-  position: absolute;
-  top: calc(1em + 2px);
-  width: 1em;
-  height: 1em;
-  border-radius: 1em;
-  cursor: ew-resize;
-  border: 1px solid currentColor;
-  background-color: var(--minmaxSlide);
-}
-
-#history {
-  z-index: 1;
-}
-
-#history use {
-  cursor: crosshair;
-}
-
-#historyInfo {
-  position: relative;
-  height: 0;
-  margin-top: 1.5em;
-}
-
-#historyInfo div {
-  display: none;
-  position: relative;
-  z-index: 2;
-  border-radius: 5px;
-  padding: 5px;
-  border: 1px solid var(--historyInfoBorder);
-  background-color: var(--historyInfoBG);
-  color: var(--historyInfoFont);
-}
-
-#historyInfo div:hover {
-  display: inline-block;
-}
-
-#multi_unix>ul>li:nth-child(n+13) {
-  display: none;
-}
-
-#multi_unix>ul>li:nth-child(12) {
-  visibility: hidden;
-}
-
-#multi_unix>ul>li:nth-child(12):before {
-  content: "…";
-  padding-left: 1em;
-  display: inline-block;
-  visibility: visible;
-  pointer-events: none;
-}
-
-.multiSelect ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.multiSelect>ul li {
-  display: inline-block;
-}
-
-.multiSelect>ul li:not(:first-child) button {
-  margin-left: 1em;
-  padding: 0 0.5em;
-  cursor: pointer;
-  border: 1px solid var(--colour);
-  background-color: var(--background);
-  color: var(--colour);
-  position: relative;
-}
-
-.multiSelect>ul li:not(:first-child) button:hover:after {
-  content: "X";
-  color: var(--multiSelectRemove);
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 0.75em;
-  font-weight: bold;
-}
-
-.multiSelect>div {
-  height: 0px;
-  position: relative;
-  z-index: 10;
-}
-
-.multiSelect>div:not(:focus-within) {
-  overflow: hidden;
-}
-
-.multiSelect>div>div {
-  position: absolute;
-  background-color: var(--multiSelectBG);
-  color: var(--multiSelectFont);
-}
-
-.multiSelect>div>div>input {
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.multiSelect>div>div ul {
-  max-height: 20em;
-  overflow-y: scroll;
-  border: 0 1px 1px 1px solid currentColor;
-}
-
-.minmax_min,
-.minmax_max,
-.minmax_minValue,
-.minmax_maxValue {
-  white-space: nowrap;
 }
 
 summary {
@@ -528,14 +42,6 @@ summary>h1 {
   margin: 0;
   font-size: inherit;
   font-weight: normal;
-}
-
-.primaryFilter {
-  display: grid;
-  width: 100%;
-  gap: 0 3em;
-  grid-template-columns: minmax(auto, 500px) 1fr;
-  align-items: start;
 }
 
 .boxed {
@@ -581,11 +87,6 @@ summary>h1 {
   transform: rotate(-90deg);
 }
 
-.primaryFilter .treeFilter {
-  margin-left: 1em;
-  padding-right: 3em;
-}
-
 .treeFilter {
   display: grid;
   gap: 0.5em 1em;
@@ -595,21 +96,6 @@ summary>h1 {
   background-color: var(--subtleBG);
   border-radius: 8px;
   padding: 1em;
-}
-
-#disktree .treeFilter .title {
-  grid-column: 1 / span 4;
-  font-size: 1em;
-  text-align: center;
-  font-weight: bold;
-}
-
-#disktree .treeFilter .title:not(:first-child) {
-  margin-top: 1em;
-}
-
-#disktree .treeFilter .title {
-  margin-bottom: 1em;
 }
 
 .treeFilter label {
@@ -625,239 +111,12 @@ summary>h1 {
   grid-column: 2 / span 3;
 }
 
-#disktree {
-  padding-left: 1em;
-}
-
-#disktree .treeFilter {
-  margin-right: 2em;
-}
-
-#scatter {
-  justify-self: end;
-  padding-right: 0.5em;
-}
-
-#scatter use {
-  cursor: pointer;
-}
-
-#scatter .back {
-  cursor: crosshair;
-}
-
-#scatter use {
-  fill: currentColor;
-  fill-opacity: 0.4;
-}
-
-#scatter use.selected {
-  fill: var(--scatterHighlight);
-  fill-opacity: 1;
-}
-
 .graphLines {
   stroke: var(--graphLines);
 }
 
 .treeFilter>select {
   grid-column: 2 / span 2;
-}
-
-.age_2years {
-  background-color: rgba(215, 48, 39, 0.75);
-}
-
-.age_1year {
-  background-color: rgba(244, 109, 67, 0.75);
-}
-
-.age_10months {
-  background-color: rgba(253, 174, 97, 0.75);
-}
-
-.age_8months {
-  background-color: rgba(254, 224, 139, 0.75);
-}
-
-.age_6months {
-  background-color: rgba(255, 255, 191, 0.75);
-}
-
-.age_3months {
-  background-color: rgba(217, 239, 139, 0.75);
-}
-
-.age_2months {
-  background-color: rgba(166, 217, 106, 0.75);
-}
-
-.age_1month {
-  background-color: rgba(102, 189, 99, 0.75);
-}
-
-.age_1week {
-  background-color: rgba(26, 152, 80, 0.75);
-}
-
-#treeKey {
-  margin-top: 1em;
-  font: 12px sans-serif;
-}
-
-#treeKey caption {
-  padding-bottom: 5px;
-  text-align: left;
-  visibility: visible;
-}
-
-#treeKey span {
-  background-color: #007DC1;
-  padding: 5px;
-  border-radius: 8px;
-  margin-right: 0.5em;
-}
-
-.treeMap rect.box {
-  fill-opacity: 0.75;
-}
-
-.treeMap rect.box:hover {
-  fill-opacity: 0.8;
-}
-
-#disktree {
-  margin-top: 0.25em;
-  display: grid;
-  width: 100%;
-  gap: 1em;
-  grid-template-columns: 1fr auto;
-  align-items: start;
-}
-
-#disktree .treeFilter {
-  grid-column: 2;
-  grid-row: 2;
-}
-
-.tabs {
-  padding-left: 0;
-  line-height: 24px;
-  position: relative;
-  width: calc(100% - 20px);
-  overflow: hidden;
-  padding: 0 0 0 20px;
-  margin: 0;
-  white-space: nowrap;
-  user-select: none;
-  pointer-events: none;
-}
-
-.tabs:after {
-  position: absolute;
-  content: "";
-  width: calc(100% + 20px);
-  bottom: 0;
-  left: 0;
-  border-bottom: 1px solid currentColor;
-  z-index: 1;
-  overflow: hidden;
-  text-align: center;
-  transform: translateX(-20px);
-}
-
-.tabs>li {
-  text-decoration: none;
-  pointer-events: all;
-  border-width: 1px;
-  border-style: solid;
-  display: inline-block;
-  position: relative;
-  z-index: 1;
-  margin: 0 -5px;
-  padding: 0 20px;
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
-  background: linear-gradient(to bottom, var(--tabBGFrom) 50%, var(--tabBGTo) 100%);
-  box-shadow: 0 3px 3px color-mix(in srgb, currentColor 40%, transparent), inset 0 1px 0 var(--background);
-  text-shadow: 0 1px var(--background);
-  border-color: currentColor;
-}
-
-.tabs>li:hover,
-.tabs>li:focus {
-  cursor: pointer;
-  outline: none;
-  background: linear-gradient(to bottom, var(--tabHoverBGFrom) 1%, var(--tabHoverBGMid) 50%, var(--tabHoverBGTo) 100%);
-}
-
-.tabs>li:before,
-.tabs>li:after {
-  position: absolute;
-  bottom: -1px;
-  width: 6px;
-  height: 6px;
-  content: " ";
-  border-style: solid;
-  border-color: currentColor;
-}
-
-.tabs>li:before {
-  left: -7px;
-  border-bottom-right-radius: 6px;
-  border-width: 0 1px 1px 0;
-  box-shadow: 2px 2px 0 var(--tabShadow);
-}
-
-.tabs>li:after {
-  right: -7px;
-  border-bottom-left-radius: 6px;
-  border-width: 0 0 1px 1px;
-  box-shadow: -2px 2px 0 var(--tabShadow);
-}
-
-.tabs .selected {
-  z-index: 2;
-  cursor: default !important;
-  border-bottom-color: var(--tabSelectedBG) !important;
-  background: var(--tabSelectedBG) !important;
-}
-
-.tabs .selected:before {
-  box-shadow: 2px 2px 0 var(--tabSelectedBG);
-}
-
-.tabs .selected:after {
-  box-shadow: -2px 2px 0 var(--tabSelectedBG);
-}
-
-#historyTabs,
-#historyTabs:after,
-#historyTabs>li,
-#historyTabs>li:before,
-#historyTabs>li:after {
-  border-color: var(--subtleBorder);
-}
-
-summary~h2:before,
-summary~h3:before {
-  padding-left: 1em;
-  content: " ";
-  font-size: var(--fontSize);
-}
-
-.exceed,
-.exceeded {
-  padding: 1em;
-}
-
-.exceeded {
-  color: var(--exceedWarning);
-  font-weight: bold;
-}
-
-.exceed {
-  color: color-mix(in srgb, currentColor var(--warningProx), var(--exceedWarning));
 }
 
 summary,
