--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -56,6 +56,10 @@ summary>h1 {
   position: relative;
 }
 
+.boxed summary::-webkit-details-marker {
+  display: none
+}
+
 .boxed[open] summary {
   border-bottom: 1px solid var(--subtleBorder);
   margin-bottom: 1em;
