Correct border CSS on MultiSelect drop-down list.

--- a/server/static/wrstat/src/multiSelect.css
+++ b/server/static/wrstat/src/multiSelect.css
@@ -52,5 +52,7 @@
 .multiSelect>div>div ul {
 	max-height: 20em;
 	overflow-y: scroll;
-	border: 0 1px 1px 1px solid currentColor;
+	border-width: 0 1px 1px 1px;
+	border-style: solid;
+	border-color: currentColor;
 }
