Give 'Last Modified' column more width so title does not overlap sort icon.

--- a/server/static/wrstat/src/usageTable.css
+++ b/server/static/wrstat/src/usageTable.css
@@ -27,9 +27,12 @@
 #usageTable col:nth-child(3),
 #usageTable col:nth-child(4),
 #usageTable col:nth-child(8),
-#usageTable col:nth-child(9),
 #usageTable col:nth-child(10) {
 	width: 5em;
+}
+
+#usageTable col:nth-child(9) {
+	width: 6em;
 }
 
 #usageTable col:nth-child(2),
