--- a/server/static/wrstat/src/usageTable.css
+++ b/server/static/wrstat/src/usageTable.css
@@ -3,6 +3,7 @@
 	width: calc(100% - 2em);
 	margin: 4em 1em 1em 1em;
 	overflow: hidden;
+	border-width: 0;
 }
 
 #usageTable tbody {
@@ -22,15 +23,53 @@
 	min-width: 64em;
 }
 
+#usageTable thead th {
+	border-top: 1px solid var(--tableBorder);
+}
+
+#usageTable thead th:first-child {
+	border-left: 1px solid var(--tableBorder);
+	border-top-left-radius: 4px;
+}
+
+#usageTable thead th:last-child,
+#usageTable.noQuota thead th:nth-child(9) {
+	border-right: 1px solid var(--tableBorder);
+	border-top-right-radius: 4px;
+}
+
+#usageTable tbody td:first-child {
+	border-left: 1px solid var(--tableBorder);
+}
+
+#usageTable tbody td:last-child,
+#usageTable.noQuota tbody td:nth-child(9) {
+	border-right: 1px solid var(--tableBorder);
+}
+
+#usageTable tbody tr:last-child td:first-child {
+	border-left: 1px solid var(--tableBorder);
+	border-bottom-left-radius: 4px;
+}
+
+#usageTable tbody tr:last-child td:last-child,
+#usageTable.noQuota tbody tr:last-child td:nth-child(9) {
+	border-right: 1px solid var(--tableBorder);
+	border-bottom-right-radius: 4px;
+}
+
 #usageTable.noQuota {
 	min-width: 32em;
+}
+
+#usageTable td:nth-child(2) {
+	text-align: center;
 }
 
 #usageTable td:first-child,
 #usageTable td:nth-child(2) {
 	text-overflow: ellipsis;
 }
-
 
 #usageTable col:nth-child(3),
 #usageTable col:nth-child(4),
